# django-boombox

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  conftest.py  inspiracao  jenkinsfile  manage.py  post-build-script.sh  pylint  pyproject.toml  requirements.txt  update.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: django.yml  test.yml
api/: settings.py  urls.py  wsgi.py
apps/configuracoes/: admin.py  apps.py  models.py
apps/system/base/: models.py  serializers.py  views.py
apps/system/conf/: admin.py  models.py
apps/system/conf/migrations/: 0001_initial.py  0002_initial.py
apps/system/core/: authentications.py  cache.py  classes.py  db_backup.py  enums.py  middleware.py  pfx.py  populators.py  rabbitmq.py  records.py  settings.py
apps/system/core/management/commands/: list_models.py  populate_db.py  reset_migrations.py
apps/system/tenants/: authentications.py  cache.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
apps/system/tenants/migrations/: 0001_initial.py
apps/users/: admin.py  authentications.py  models.py  serializers.py  throttles.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
common/: environment.py  jwt.py
data/api-collections/: postman.json
data/default/records/: example.json
docker/: Dockerfile  README.md  docker-compose.yml
libs/twilio/: sms.py
nginx/: proxy.conf
proxy/: server.conf
utils/: date.py  env.py  jwt.py  rabbitmq.py
